.metadata/.plugins/org.eclipse.cdt.ui/STL.build.log
18:39:42 **** Incremental Build of configuration Release for project STL ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\STL.o" "..\\src\\STL.cpp" 
..\src\STL.cpp: In function 'int main()':
..\src\STL.cpp:22:13: error: 'maximum' cannot be used as a function
     maximum();
             ^

18:39:43 Build Failed. 1 errors, 0 warnings. (took 1s.95ms)

